overflow fixed

--- a/src/app/features/features.css
+++ b/src/app/features/features.css
@@ -9,6 +9,7 @@
 
 .features-container{
   background-color: white;
+  overflow: hidden;
 }
 
 /* Intro Section */
@@ -68,7 +69,7 @@
     z-index: 1;
     width: calc(100vw + 500px);
     margin-left: -250px;
-
+    overflow: hidden;
   }
 
 /* Circle container for animated circles */
